--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,7 @@
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
-eureka.client.service-url.defaultZone=http://localhost:2222/eureka
-spring.sleuth.sampler.percentage=1.0
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.zipkin.base-url=http://localhost:4444
-spring.zipkin.enabled=true
+spring.datasource.url=jdbc:mysql://localhost/simportal
+spring.datasource.username=root
+
