--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,5 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/simportal
 spring.datasource.username=root
+spring.datasource.password=Dragon123$a
 
