--- a/application.properties
+++ b/application.properties
@@ -3,6 +3,7 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/simportal
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=Dragon123$a
 
