--- a/application.properties
+++ b/application.properties
@@ -4,4 +4,5 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost/simportal
 spring.jpa.hibernate.ddl-auto=update
+spring.zipkin.base-url=http://localhost:9411/
 
